--- a/index.html
+++ b/index.html
@@ -246,84 +246,41 @@
   </div>
 </section>
 
-    <!--Artigo Especial-->
-    <article class="w-full max-w-5xl mx-auto bg-white rounded-2xl shadow-lg overflow-hidden p-6">
-  <!-- Título -->
-  <header class="mb-6 border-b border-gray-200 pb-4">
-    <h1 class="text-2xl md:text-3xl font-bold text-gray-900 leading-snug">
-      INÉDITO! CRUZ DE EINSTEIN REVELA MATÉRIA ESCURA!
-    </h1>
-  </header>
+<!-- Card do Artigo -->
+<!-- ======================= -->
+<section class="max-w-5xl mx-auto px-4 my-10">
+  <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
+    
+    <!-- Imagem na esquerda -->
+    <div class="relative w-full md:w-1/2" style="padding-top:56.25%;">
+      <img
+        src="https://i.postimg.cc/521Qj1s9/images.jpg"
+        alt="Representação artística de fóton interagindo com nuvem atômica"
+        class="absolute inset-0 w-full h-full object-cover transition-transform duration-500 hover:scale-105"
+        loading="lazy"
+      />
+    </div>
 
-  <!-- Conteúdo -->
-  <section class="space-y-4 text-gray-700 text-base md:text-lg leading-relaxed">
-    <p>
-      No vasto cosmos, a gravidade às vezes se transforma em um artista cósmico. Quando uma galáxia muito massiva fica exatamente no caminho da luz 
-      de uma galáxia mais distante, o espaço-tempo é distorcido, e a imagem do objeto de fundo pode se multiplicar em arcos, anéis ou cruzes brilhantes. 
-      Esse fenômeno é chamado de <strong>lente gravitacional</strong>.
-    </p>
+    <!-- Conteúdo à direita -->
+    <div class="w-full md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
+      <div>
+        <h2 class="text-2xl font-bold text-[#071834] mb-4">
+          Quanto tempo um fóton permanece como excitação atômica? O enigma do tempo quântico
+        </h2>
+        <p class="text-gray-700 mb-6">
+          Descubra o estudo que investiga quanto tempo um fóton permanece como excitação atômica em nuvens de átomos, com resultados surpreendentes da óptica quântica.
+        </p>
+      </div>
+      <div>
+        <a href="https://portalciencianews.com.br/quanto-tempo-foton-excitacao-atomica.html" 
+           class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition-colors duration-300">
+          Leia mais
+        </a>
+      </div>
+    </div>
 
-    <p>
-      E agora, os astrônomos acabam de revelar um exemplo extraordinário. Uma equipe internacional liderada por <strong>Pierre Cox</strong> identificou 
-      <strong>HerS-3</strong>, uma galáxia formadora de estrelas a mais de 11 bilhões de anos-luz de distância, que aparece distorcida na forma de uma 
-      <strong>Cruz de Einstein</strong> com cinco imagens distintas — algo jamais visto antes em sistemas desse tipo observados no submilímetro.
-    </p>
-
-    <p>
-      As observações, feitas com o <strong>ALMA</strong>, o <strong>NOEMA</strong> e o <strong>Telescópio Espacial Hubble</strong>, mostraram que a luz 
-      de HerS-3 é amplificada por um grupo de galáxias a cerca de 7 bilhões de anos-luz da Terra. Mas havia um enigma: os modelos de lente que consideravam 
-      apenas as galáxias visíveis não conseguiam reproduzir a complexa configuração da cruz.
-    </p>
-
-    <p>
-      A solução surpreendente veio quando os cientistas adicionaram ao modelo um quinto componente massivo, invisível. Sem qualquer galáxia detectada naquela 
-      posição, a única explicação plausível era a presença de um enorme <strong>halo de matéria escura</strong>. Esse halo, pertencente ao grupo de galáxias 
-      no primeiro plano, seria o responsável por completar o efeito de lente e gerar as cinco imagens da Cruz de Einstein.
-    </p>
-
-    <p>
-      Na prática, HerS-3 se transformou em um laboratório cósmico único. Através desse raro alinhamento, os astrônomos conseguem observar em detalhes uma galáxia 
-      em intenso surto de formação estelar no auge da evolução cósmica, e ao mesmo tempo mapear diretamente a distribuição de matéria escura em grande escala.
-    </p>
-
-    <p>
-      Publicado no <strong>Astrophysical Journal</strong> em setembro de 2025, este estudo mostra não apenas um espetáculo visual, mas também um lembrete de que 
-      a maior parte da massa do universo permanece invisível.
-    </p>
-
-    <p>
-      E fica a grande questão: quantos outros halos de matéria escura como esse ainda estão escondidos, moldando o cosmos sem jamais emitir luz?
-    </p>
-
-    <p>
-      Se você ficou impressionado com essa descoberta e quer acompanhar os próximos capítulos da exploração do universo invisível, inscreva-se no canal e ative o sininho. 
-      Afinal, a ciência não para — e o próximo mistério pode estar bem diante dos nossos olhos.
-    </p>
+  </div>
   </section>
-
-  <!-- Vídeo incorporado -->
-<div class="mt-6 relative w-full" style="padding-top:56.25%;"> <!-- 16:9 -->
-  <iframe 
-    class="absolute top-0 left-0 w-full h-full rounded-xl shadow-md"
-    src="https://www.youtube.com/embed/hF_4n3e5xuM?si=JBq4bBpxZY0gauJs" 
-    title="YouTube video player" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen>
-  </iframe>
-</div>
-
-<!-- Botão para assistir no YouTube -->
-<div class="mt-6 flex justify-center">
-  <a href="https://youtu.be/hF_4n3e5xuM?si=JBq4bBpxZY0gauJs" target="_blank" 
-     class="inline-flex items-center gap-2 bg-red-600 hover:bg-red-700 text-white font-medium px-6 py-3 rounded-full shadow-lg transition duration-300">
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 fill-current" viewBox="0 0 24 24">
-      <path d="M19.615 3.184c-1.604-.184-8.031-.184-8.031-.184s-6.428 0-8.031.184C2.356 3.37 1.37 4.356 1.184 5.984 1 7.588 1 12 1 12s0 4.412.184 6.016c.186 1.628 1.172 2.615 2.369 2.8 1.603.184 8.031.184 8.031.184s6.427 0 8.031-.184c1.197-.185 2.183-1.172 2.369-2.8.184-1.604.184-6.016.184-6.016s0-4.412-.184-6.016c-.186-1.628-1.172-2.615-2.369-2.8zM9.75 15.5v-7l6.5 3.5-6.5 3.5z"/>
-    </svg>
-    Assistir no YouTube
-  </a>
-</div>
-</article>
 
     <!-- ===== FEED PHYS.ORG ===== -->
     <section class="max-w-6xl mx-auto p-4">
