--- a/index.html
+++ b/index.html
@@ -173,30 +173,42 @@
   <div class="container main-inner py-8">
 
 
-<!-- ===== DESTAQUE ===== -->
-<section class="w-full bg-white flex justify-center py-12 px-4">
-  <div class="max-w-6xl w-full bg-[#0B1A35] rounded-2xl shadow-lg shadow-white/40 overflow-hidden flex flex-col md:flex-row hover:scale-105 transition-transform duration-300 ease-in-out">
+<!-- ======================= -->
+<!-- Card Horizontal do Artigo -->
+<!-- ======================= -->
+<section class="max-w-5xl mx-auto px-4 my-10">
+  <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
 
-    <!-- Vídeo à esquerda (16:9 responsivo) -->
-    <div class="w-full md:w-1/2">
-      <div class="relative w-full pt-[56.25%]"> <!-- 16:9 -->
-        <iframe class="absolute top-0 left-0 w-full h-full" 
-          src="https://www.youtube.com/embed/FexixXTUI7M" 
-          title="Tempo Negativo Vídeo" frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          allowfullscreen></iframe>
+    <!-- Imagem 16:9 à esquerda -->
+    <div class="md:w-1/2 flex-shrink-0">
+      <div class="w-full aspect-w-16 aspect-h-9">
+        <img
+          src="https://i.postimg.cc/521Qj1s9/images.jpg"
+          alt="Representação artística de fóton interagindo com nuvem atômica"
+          class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
+          loading="lazy"
+        />
       </div>
     </div>
 
     <!-- Conteúdo à direita -->
-    <div class="w-full md:w-1/2 flex flex-col justify-center p-8">
-      <h2 class="text-2xl md:text-3xl font-bold text-orange-500 mb-4">
-        TEMPO NEGATIVO? A descoberta quântica que desafia a realidade!
-      </h2>
-      <p class="text-white text-base leading-relaxed">
-        Cientistas detectam fótons com “tempo negativo” em átomos, revelando novas pistas sobre a natureza quântica do tempo.
-      </p>
+    <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
+      <div>
+        <h2 class="text-2xl font-bold text-[#071834] mb-4">
+          Quanto tempo um fóton permanece como excitação atômica? O enigma do tempo quântico
+        </h2>
+        <p class="text-gray-700 mb-6">
+          Descubra o estudo que investiga quanto tempo um fóton permanece como excitação atômica em nuvens de átomos, com resultados surpreendentes da óptica quântica.
+        </p>
+      </div>
+      <div>
+        <a href="https://portalciencianews.com.br/quanto-tempo-foton-excitacao-atomica.html" 
+           class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition-colors duration-300">
+          Leia mais
+        </a>
+      </div>
     </div>
+
   </div>
 </section>
 
