--- a/index.html
+++ b/index.html
@@ -279,16 +279,17 @@
     <div class="grid md:grid-cols-3 gap-8">
 
       <!-- CARD 1 -->
-      <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-        <iframe class="w-full h-48 md:h-56" src="https://www.youtube.com/embed/kaTh4qwc6YQ" title="Sensores Quânticos" frameborder="0" allowfullscreen></iframe>
-        <div class="p-4">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">SENSORES QUÂNTICOS CAPAZES DE MEDIR A PRESSÃO NO NÚCLEO DA TERRA FORAM CRIADOS</h3>
-          <p class="text-gray-600 mb-4">Observar efeitos quânticos em materiais já é difícil. Agora, imagine fazer isso quando o material está sendo esmagado sob pressões trinta mil vezes maiores que a pressão atmosférica da Terra. O problema é que sensores comuns simplesmente não aguentam esse nível de estresse. Mas isso mudou com uma inovação liderada por Chong Zu, físico da Universidade de Washington em St. Louis, nos Estados Unidos.</p>
-          <a href="https://youtu.be/kaTh4qwc6YQ?si=IK99_qEAhqz8jQiz" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
-            <i class="fab fa-youtube mr-2"></i> Assista no YouTube
-          </a>
-        </div>
-      </div>
+<div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
+  <iframe class="w-full h-48 md:h-56" src="https://www.youtube.com/embed/no6tjPg0PtM" title="Círculos Misteriosos no Universo" frameborder="0" allowfullscreen></iframe>
+  <div class="p-4">
+    <h3 class="text-xl font-semibold text-gray-800 mb-2">CÍRCULOS MISTERIOSOS NO UNIVERSO PODEM SER EXPLOSÕES DE BURACOS NEGROS!</h3>
+    <p class="text-gray-600 mb-4">Em 2019, os radiotelescópios revelaram algo que ninguém esperava: círculos gigantescos, perfeitos e assustadoramente nítidos, brilhando apenas em ondas de rádio no meio do espaço. Eles receberam um nome à altura do mistério: ORCs — Odd Radio Circles, ou Círculos de Rádio Estranhos.</p>
+    <a href="https://youtu.be/no6tjPg0PtM" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
+      <i class="fab fa-youtube mr-2"></i> Assista no YouTube
+    </a>
+  </div>
+</div>
+
 
       <!-- CARD 2 -->
       <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
