--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <!-- ======================= -->
 <!-- Card Horizontal do Artigo -->
 <!-- ======================= -->
-<section class="max-w-5xl mx-auto px-4 my-10">
+<section class="max-w-[90rem] mx-auto px-6 my-10">
   <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
 
     <!-- Imagem 16:9 à esquerda -->
@@ -211,6 +211,7 @@
 
   </div>
 </section>
+
 
     <section id="videos-e-destaque" class="py-16 bg-gray-50">
   <div class="container mx-auto px-4">
