--- a/lua-lado-oculto-mais-frio.html
+++ b/lua-lado-oculto-mais-frio.html
@@ -278,7 +278,7 @@
       Para estimar a temperatura original em que a rocha cristalizou, os cientistas mediram composições em minerais como olivina, piroxena e plagioclásio, além de isótopos de chumbo derivados do decaimento do urânio. Essa assinatura química funciona como um “termômetro antigo”.
     </p>
     <p>
-      Comparando essas medições com simulações computadorizadas, a equipe inferiu que as rochas do lado oculto teriam se solidificado em ~1.100 °C — valor cerca de 100 °C mais baixo do que rochas semelhantes do lado próximo. 1
+      Comparando essas medições com simulações computadorizadas, a equipe inferiu que as rochas do lado oculto teriam se solidificado em ~1.100 °C — valor cerca de 100 °C mais baixo do que rochas semelhantes do lado próximo.
     </p>
     <p>
       Eles foram além: estudaram a “rocha-mãe” (antes de derreter e recristalizar) com base em satélite e modelagem geofísica, encontrando diferença de ~70 °C entre os dois lados nesse estágio anterior.
@@ -305,10 +305,10 @@
       Outra linha sugere que a Lua se formou a partir da fusão de dois corpos com perfis térmicos distintos. Cada “metade” traria consigo uma herança térmica diferente — o que explicaria por que o lado oculto parece mais frio desde o início. 
     </p>
     <p>
-      Também foi levada em conta a distribuição desigual do material KREEP (potássio, elementos de terras raras, fósforo) — que concentra geradores de calor — no manto da Lua. Esse material é mais abundante no lado visível, contribuindo para sua temperatura interna mais elevada. 6
+      Também foi levada em conta a distribuição desigual do material KREEP (potássio, elementos de terras raras, fósforo) — que concentra geradores de calor — no manto da Lua. Esse material é mais abundante no lado visível, contribuindo para sua temperatura interna mais elevada. 
     </p>
     <p>
-      Por fim, modelos recentes discutem que o brilho da Terra logo após o impacto inicial poderia provocar circulação no oceano magmático lunar, transportando cristais e influenciando as diferenças crustais e térmicas entre as faces. 7
+      Por fim, modelos recentes discutem que o brilho da Terra logo após o impacto inicial poderia provocar circulação no oceano magmático lunar, transportando cristais e influenciando as diferenças crustais e térmicas entre as faces. 
     </p>
   </div>
 </section>
