--- a/index.html
+++ b/index.html
@@ -169,110 +169,113 @@
 
   <!-- =========================== MAIN AREA =========================== -->
   <main id="mainContent" class="site-main min-h-[400px] bg-white">
-    
 
-<!-- ======================= -->
-<!-- Cards Horizontais dos Artigos -->
-<!-- ======================= -->
-<section class="max-w-[90rem] mx-auto px-6 my-10 space-y-10">
+  <!-- ======================= -->
+  <!-- Cards Horizontais dos Artigos -->
+  <!-- ======================= -->
+  <section class="max-w-[1000px] mx-auto px-[460px] my-10 space-y-10 sm:px-6 md:px-10 lg:px-0">
 
-  <!-- Card mais recente: Lua -->
-  <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
+    <!-- Card mais recente: Lua -->
+    <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
 
-    <!-- Imagem 16:9 à esquerda -->
-    <div class="md:w-1/2 flex-shrink-0">
-      <div class="w-full aspect-w-16 aspect-h-9">
-        <img
-          src="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg"
-          alt="Comparação: lado visível e lado oculto da Lua (imagem Clementine / NASA)"
-          class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
-          loading="lazy"
-        />
+      <!-- Imagem 16:9 à esquerda -->
+      <div class="md:w-1/2 flex-shrink-0">
+        <div class="w-full aspect-w-16 aspect-h-9">
+          <img
+            src="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg"
+            alt="Comparação: lado visível e lado oculto da Lua (imagem Clementine / NASA)"
+            class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
+            loading="lazy"
+          />
+        </div>
       </div>
+
+      <!-- Conteúdo à direita -->
+      <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
+        <div>
+          <h2 class="text-2xl font-bold text-[#071834] mb-4">
+            Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio
+          </h2>
+          <p class="text-gray-700 mb-6">
+            Fragmentos da missão Chang’e-6 indicam que o interior do lado oculto da Lua esfriou mais rápido, 
+            revelando assimetrias térmicas profundas na formação do satélite.
+          </p>
+        </div>
+        <div>
+          <a href="https://portalciencianews.com.br/lua-lado-oculto-mais-frio.html" 
+             class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition-colors duration-300">
+            Leia mais
+          </a>
+        </div>
+      </div>
+
     </div>
 
-    <!-- Conteúdo à direita -->
-    <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
-      <div>
-        <h2 class="text-2xl font-bold text-[#071834] mb-4">
-          Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio
-        </h2>
-        <p class="text-gray-700 mb-6">
-          Fragmentos da missão Chang’e-6 indicam que o interior do lado oculto da Lua esfriou mais rápido, 
-          revelando assimetrias térmicas profundas na formação do satélite.
-        </p>
+    <!-- Card anterior: fóton -->
+    <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
+
+      <!-- Imagem 16:9 à esquerda -->
+      <div class="md:w-1/2 flex-shrink-0">
+        <div class="w-full aspect-w-16 aspect-h-9">
+          <img
+            src="https://i.postimg.cc/521Qj1s9/images.jpg"
+            alt="Representação artística de fóton interagindo com nuvem atômica"
+            class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
+            loading="lazy"
+          />
+        </div>
       </div>
-      <div>
-        <a href="https://portalciencianews.com.br/lua-lado-oculto-mais-frio.html" 
-           class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition-colors duration-300">
-          Leia mais
-        </a>
+
+      <!-- Conteúdo à direita -->
+      <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
+        <div>
+          <h2 class="text-2xl font-bold text-[#071834] mb-4">
+            Quanto tempo um fóton permanece como excitação atômica? O enigma do tempo quântico
+          </h2>
+          <p class="text-gray-700 mb-6">
+            Descubra o estudo que investiga quanto tempo um fóton permanece como excitação atômica em nuvens de átomos, com resultados surpreendentes da óptica quântica.
+          </p>
+        </div>
+        <div>
+          <a href="https://portalciencianews.com.br/quanto-tempo-foton-excitacao-atomica.html" 
+             class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition-colors duration-300">
+            Leia mais
+          </a>
+        </div>
       </div>
+
     </div>
 
-  </div>
+  </section>
 
-  <!-- Card anterior: fóton -->
-  <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
-
-    <!-- Imagem 16:9 à esquerda -->
-    <div class="md:w-1/2 flex-shrink-0">
-      <div class="w-full aspect-w-16 aspect-h-9">
-        <img
-          src="https://i.postimg.cc/521Qj1s9/images.jpg"
-          alt="Representação artística de fóton interagindo com nuvem atômica"
-          class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
-          loading="lazy"
-        />
-      </div>
-    </div>
-
-    <!-- Conteúdo à direita -->
-    <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
-      <div>
-        <h2 class="text-2xl font-bold text-[#071834] mb-4">
-          Quanto tempo um fóton permanece como excitação atômica? O enigma do tempo quântico
-        </h2>
-        <p class="text-gray-700 mb-6">
-          Descubra o estudo que investiga quanto tempo um fóton permanece como excitação atômica em nuvens de átomos, com resultados surpreendentes da óptica quântica.
-        </p>
-      </div>
-      <div>
-        <a href="https://portalciencianews.com.br/quanto-tempo-foton-excitacao-atomica.html" 
-           class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition-colors duration-300">
-          Leia mais
-        </a>
-      </div>
-    </div>
-
-  </div>
-
-</section>
-
-    <section id="videos-e-destaque" class="py-16 bg-gray-50">
-  <div class="container mx-auto px-4">
+  <!-- ======================= -->
+  <!-- Seção de Vídeos Recentes -->
+  <!-- ======================= -->
+ <section id="videos-e-destaque" class="py-16 bg-gray-50">
+  <div class="max-w-[1000px] mx-auto px-[460px] sm:px-6 md:px-10">
     <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Vídeos Recentes</h2>
     <div class="grid md:grid-cols-3 gap-8">
 
       <!-- CARD 1 -->
-<div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-  <iframe class="w-full h-48 md:h-56" src="https://www.youtube.com/embed/no6tjPg0PtM" title="Círculos Misteriosos no Universo" frameborder="0" allowfullscreen></iframe>
-  <div class="p-4">
-    <h3 class="text-xl font-semibold text-gray-800 mb-2">CÍRCULOS MISTERIOSOS NO UNIVERSO PODEM SER EXPLOSÕES DE BURACOS NEGROS!</h3>
-    <p class="text-gray-600 mb-4">Em 2019, os radiotelescópios revelaram algo que ninguém esperava: círculos gigantescos, perfeitos e assustadoramente nítidos, brilhando apenas em ondas de rádio no meio do espaço. Eles receberam um nome à altura do mistério: ORCs — Odd Radio Circles, ou Círculos de Rádio Estranhos.</p>
-    <a href="https://youtu.be/no6tjPg0PtM" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
-      <i class="fab fa-youtube mr-2"></i> Assista no YouTube
-    </a>
-  </div>
-</div>
-
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
+        <div class="w-full h-48 md:h-56 pointer-events-none">
+          <iframe class="w-full h-full" src="https://www.youtube.com/embed/no6tjPg0PtM" title="Círculos Misteriosos no Universo" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="p-4">
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">CÍRCULOS MISTERIOSOS NO UNIVERSO PODEM SER EXPLOSÕES DE BURACOS NEGROS!</h3>
+          <a href="https://youtu.be/no6tjPg0PtM" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
+            <i class="fab fa-youtube mr-2"></i> Assista no YouTube
+          </a>
+        </div>
+      </div>
 
       <!-- CARD 2 -->
       <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-        <iframe class="w-full h-48 md:h-56" src="https://www.youtube.com/embed/dlGDojJp2uQ" title="Vida em Marte" frameborder="0" allowfullscreen></iframe>
+        <div class="w-full h-48 md:h-56 pointer-events-none">
+          <iframe class="w-full h-full" src="https://www.youtube.com/embed/dlGDojJp2uQ" title="Vida em Marte" frameborder="0" allowfullscreen></iframe>
+        </div>
         <div class="p-4">
           <h3 class="text-xl font-semibold text-gray-800 mb-2">NASA PODE TER DESTRUÍDO ACIDENTALMENTE O PRIMEIRO SINAL DE VIDA EM MARTE - HÁ 50 ANOS!</h3>
-          <p class="text-gray-600 mb-4">As sondas Viking realizaram quatro experimentos principais. O mais importante deles foi o Cromatógrafo a Gás com Espectrômetro de Massas, que tinha como missão procurar moléculas orgânicas, os blocos básicos da vida. Para surpresa de todos, o resultado foi negativo. Nenhum sinal de orgânicos detectado. Na época, a conclusão foi: Marte é hostil demais para a vida.</p>
           <a href="https://youtu.be/dlGDojJp2uQ?si=i8Nekc-kilY4iUka" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
             <i class="fab fa-youtube mr-2"></i> Assista no YouTube
           </a>
@@ -281,10 +284,11 @@
 
       <!-- CARD 3 -->
       <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-        <iframe class="w-full h-48 md:h-56" src="https://www.youtube.com/embed/ken15l6Wmsc" title="Partículas como ondas" frameborder="0" allowfullscreen></iframe>
+        <div class="w-full h-48 md:h-56 pointer-events-none">
+          <iframe class="w-full h-full" src="https://www.youtube.com/embed/ken15l6Wmsc" title="Partículas como ondas" frameborder="0" allowfullscreen></iframe>
+        </div>
         <div class="p-4">
           <h3 class="text-xl font-semibold text-gray-800 mb-2">PARTÍCULAS DO TAMANHO DE VÍRUS SE COMPORTAM COMO ONDAS - PELA PRIMEIRA VEZ!</h3>
-          <p class="text-gray-600 mb-4">A mecânica quântica diz que não só os átomos, mas também partículas maiores, como nanopartículas do tamanho de um vírus, podem agir como ondas. Isso é descrito pela chamada função de onda, que é como um mapa mostrando onde a partícula provavelmente estará.</p>
           <a href="https://youtu.be/ken15l6Wmsc?si=vcYhGxfpCnjnx-iO" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
             <i class="fab fa-youtube mr-2"></i> Assista no YouTube
           </a>
@@ -296,66 +300,8 @@
 </section>
 
 
-    <!-- ===== Vídeos mais vistos do Ciência News ===== -->
-   <section style="max-width:1200px; margin:40px auto; padding:20px;">
+</main>
 
-  <!-- Título da Seção -->
-  <div style="text-align:center; margin-bottom:30px; font-size:1.5rem; font-weight:600; color:#222;">
-    Mais vistos do Ciência News no YouTube
-  </div>
-
-  <!-- Container dos Cards -->
-  <div style="display:flex; flex-wrap:wrap; gap:20px; justify-content:center;">
-
-    <!-- Card Vídeo 1 -->
-    <div style="flex:1 1 300px; min-width:300px; max-width:calc(33.333% - 13.33px); background:#fff; border-radius:16px; box-shadow:0 4px 12px rgba(0,0,0,0.1); overflow:hidden; display:flex; flex-direction:column; align-items:center;">
-      <div style="width:100%; position:relative; padding-bottom:56.25%;">
-        <iframe src="https://www.youtube.com/embed/SQ6i4ea5gW4" style="position:absolute; top:0; left:0; width:100%; height:100%; border:none;" allowfullscreen></iframe>
-      </div>
-      <a href="https://www.youtube.com/watch?v=SQ6i4ea5gW4" target="_blank" style="margin:12px 0 20px 0; padding:10px 20px; background:#cc0000; color:#fff; border-radius:24px; text-decoration:none; font-size:0.9rem; font-weight:500;">
-        Assistir no YouTube
-      </a>
-    </div>
-
-    <!-- Card Vídeo 2 -->
-    <div style="flex:1 1 300px; min-width:300px; max-width:calc(33.333% - 13.33px); background:#fff; border-radius:16px; box-shadow:0 4px 12px rgba(0,0,0,0.1); overflow:hidden; display:flex; flex-direction:column; align-items:center;">
-      <div style="width:100%; position:relative; padding-bottom:56.25%;">
-        <iframe src="https://www.youtube.com/embed/wVkEAwrEIS0" style="position:absolute; top:0; left:0; width:100%; height:100%; border:none;" allowfullscreen></iframe>
-      </div>
-      <a href="https://www.youtube.com/watch?v=wVkEAwrEIS0" target="_blank" style="margin:12px 0 20px 0; padding:10px 20px; background:#cc0000; color:#fff; border-radius:24px; text-decoration:none; font-size:0.9rem; font-weight:500;">
-        Assistir no YouTube
-      </a>
-    </div>
-
-    <!-- Card Vídeo 3 -->
-    <div style="flex:1 1 300px; min-width:300px; max-width:calc(33.333% - 13.33px); background:#fff; border-radius:16px; box-shadow:0 4px 12px rgba(0,0,0,0.1); overflow:hidden; display:flex; flex-direction:column; align-items:center;">
-      <div style="width:100%; position:relative; padding-bottom:56.25%;">
-        <iframe src="https://www.youtube.com/embed/yJkLrHIYKBc" style="position:absolute; top:0; left:0; width:100%; height:100%; border:none;" allowfullscreen></iframe>
-      </div>
-      <a href="https://www.youtube.com/watch?v=yJkLrHIYKBc" target="_blank" style="margin:12px 0 20px 0; padding:10px 20px; background:#cc0000; color:#fff; border-radius:24px; text-decoration:none; font-size:0.9rem; font-weight:500;">
-        Assistir no YouTube
-      </a>
-    </div>
-
-  </div>
-</section>
-
-    <!-- ===== FEED PHYS.ORG ===== -->
-    <section class="max-w-6xl mx-auto p-4">
-  <h1 class="text-2xl font-bold mb-6 text-center">Artigos Recomendados</h1>
-  <div id="feed" class="grid gap-6 md:grid-cols-3 sm:grid-cols-1"></div>
-    </section>
-    
- <!-- ===========================
-     SEÇÃO DE VÍDEOS E MATÉRIA EM DESTAQUE
-     - Grid responsivo com 3 vídeos
-     - Cada vídeo: título, descrição resumida, botão com ícone YouTube
-     =========================== -->
-
-<!-- CDN Font Awesome para ícones -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pVfG+Y8Vv3wYkXDZ+0EzHn+uHyl25k67zE1eLvBrhrc0XwtKX8p3iK7h7v+Y+DZf0NsQKx/kS4djG7xEX1lKwg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-  </main>
 
   <!-- =========================== FOOTER =========================== -->
   <footer class="bg-gray-900 text-white py-8">
