--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
-  <!-- Meta básico -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="theme-color" content="#0b2545" />
 
-  <!-- Título e descrição -->
   <title>Ciência News — Uma pílula com notícias sobre ciências</title>
   <meta name="description" content="Ciência News — Uma pílula com notícias sobre ciências. Atualizações rápidas, confiáveis e curtas sobre ciência." />
-
-  <!-- Canonical -->
   <link rel="canonical" href="https://portalciencianews.com.br/" />
 
   <!-- Open Graph / Social Sharing -->
@@ -58,58 +54,32 @@
   }
   </script>
 
-  <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
-
-  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Bootstrap Icons CDN -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-
-  <!-- Swiper CSS (Hero Carrossel) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 <body class="antialiased text-gray-900 bg-white">
 
-  <!-- =========================== HEADER =========================== -->
+  <!-- HEADER -->
   <header class="w-full bg-[#0b2545] text-white shadow" role="banner">
     <div class="max-w-7xl mx-auto flex items-center justify-between px-4 py-3">
-      <!-- Logo -->
       <a href="index.html" class="flex items-center gap-2" aria-label="Ciência News — Início">
         <img src="logo.png" alt="Logotipo Ciência News" class="h-10 w-auto" />
         <span class="font-bold text-lg tracking-tight">Ciência News</span>
       </a>
-
-      <!-- Navegação Principal (desktop) -->
       <nav class="hidden md:flex gap-6" aria-label="Menu principal">
         <a href="https://canalciencianews.github.io/" class="hover:text-orange-400 transition font-semibold">Início</a>
         <a href="#" class="hover:text-orange-400 transition font-semibold">Contato</a>
       </nav>
-
-      <!-- Ícones Sociais -->
       <div class="hidden md:flex gap-4 text-xl items-center">
-        <a href="https://www.facebook.com/profile.php?id=100079774894307" class="hover:text-orange-400" aria-label="Facebook">
-          <i class="bi bi-facebook"></i>
-        </a>
-        <a href="https://www.instagram.com/ciencianews1/" class="hover:text-orange-400" aria-label="Instagram">
-          <i class="bi bi-instagram"></i>
-        </a>
-        <a href="https://www.youtube.com/@CienciaNewsOficial" class="hover:text-orange-400" aria-label="YouTube">
-          <i class="bi bi-youtube"></i>
-        </a>
-        <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" class="hover:text-orange-400" aria-label="TikTok">
-          <i class="bi bi-tiktok"></i>
-        </a>
-        <a href="https://www.kwai.com/@CanalCienciaNews" class="hover:text-orange-400" aria-label="Kwai (ícone genérico)">
-          <i class="bi bi-camera-video"></i>
-        </a>
-        <a href="https://whatsapp.com/channel/0029VaAxpuNDOQIOYg1sP70c" class="hover:text-orange-400" aria-label="WhatsApp">
-          <i class="bi bi-whatsapp"></i>
-        </a>
+        <a href="https://www.facebook.com/profile.php?id=100079774894307" class="hover:text-orange-400" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/ciencianews1/" class="hover:text-orange-400" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.youtube.com/@CienciaNewsOficial" class="hover:text-orange-400" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
+        <a href="https://www.tiktok.com/@canalciencianews?_t=ZM-8yudMEh6wI2&_r=1" class="hover:text-orange-400" aria-label="TikTok"><i class="bi bi-tiktok"></i></a>
+        <a href="https://www.kwai.com/@CanalCienciaNews" class="hover:text-orange-400" aria-label="Kwai"><i class="bi bi-camera-video"></i></a>
+        <a href="https://whatsapp.com/channel/0029VaAxpuNDOQIOYg1sP70c" class="hover:text-orange-400" aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
       </div>
-
-      <!-- Botão Mobile -->
       <button class="md:hidden p-2 rounded focus:outline-none focus:ring-2 focus:ring-white" id="navToggle" aria-label="Abrir menu" aria-expanded="false" aria-controls="mobileNav">
         <span class="sr-only">Abrir menu</span>
         <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
@@ -117,9 +87,7 @@
         </svg>
       </button>
     </div>
-
-    <!-- Menu Mobile -->
-    <nav id="mobileNav" class="md:hidden bg-[#0b2545] px-4 py-2 space-y-2 hidden" aria-label="Menu móvel">
+    <nav id="mobileNav" class="md:hidden bg-[#0b2545] px-4 py-2 space-y-2 hidden transition-all duration-300" aria-label="Menu móvel">
       <a href="https://canalciencianews.github.io/" class="block text-white hover:text-orange-400 font-semibold">Início</a>
       <a href="#" class="block text-white hover:text-orange-400 font-semibold">Notícias</a>
       <a href="#" class="block text-white hover:text-orange-400 font-semibold">Contato</a>
@@ -134,7 +102,7 @@
     </nav>
   </header>
 
-  <!-- =========================== HERO CARROSSEL (Swiper) =========================== -->
+  <!-- HERO CARROSSEL -->
   <section class="relative w-full z-10">
     <div class="swiper w-full" style="aspect-ratio: 1920/350;">
       <div class="swiper-wrapper">
@@ -152,32 +120,34 @@
         </div>
       </div>
     </div>
-    <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         new Swiper('.swiper', {
           loop: true,
-          autoplay: {
-            delay: 5000,
-            disableOnInteraction: false,
-          },
+          autoplay: { delay: 5000, disableOnInteraction: false },
+        });
+        // Mobile nav script
+        const navToggle = document.getElementById('navToggle');
+        const mobileNav = document.getElementById('mobileNav');
+        navToggle.addEventListener('click', function () {
+          mobileNav.classList.toggle('hidden');
+          navToggle.setAttribute('aria-expanded', !mobileNav.classList.contains('hidden'));
         });
       });
     </script>
   </section>
 
-  <!-- =========================== MAIN AREA =========================== -->
+  <!-- MAIN AREA -->
   <main id="mainContent" class="site-main min-h-[400px] bg-white">
 
   <!-- ======================= -->
   <!-- Cards Horizontais dos Artigos -->
   <!-- ======================= -->
-  <section class="max-w-[1000px] mx-auto px-[460px] my-10 space-y-10 sm:px-6 md:px-10 lg:px-0">
+  <section class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0 my-10 space-y-10">
 
     <!-- Card mais recente: Lua -->
     <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
-
       <!-- Imagem 16:9 à esquerda -->
       <div class="md:w-1/2 flex-shrink-0">
         <div class="w-full aspect-w-16 aspect-h-9">
@@ -189,7 +159,6 @@
           />
         </div>
       </div>
-
       <!-- Conteúdo à direita -->
       <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
         <div>
@@ -208,12 +177,10 @@
           </a>
         </div>
       </div>
-
     </div>
 
     <!-- Card anterior: fóton -->
     <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
-
       <!-- Imagem 16:9 à esquerda -->
       <div class="md:w-1/2 flex-shrink-0">
         <div class="w-full aspect-w-16 aspect-h-9">
@@ -225,7 +192,6 @@
           />
         </div>
       </div>
-
       <!-- Conteúdo à direita -->
       <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
         <div>
@@ -243,7 +209,6 @@
           </a>
         </div>
       </div>
-
     </div>
 
   </section>
@@ -251,63 +216,118 @@
   <!-- ======================= -->
   <!-- Seção de Vídeos Recentes -->
   <!-- ======================= -->
- <section id="videos-e-destaque" class="py-16 bg-gray-50">
-  <div class="max-w-[1000px] mx-auto px-[460px] sm:px-6 md:px-10">
-    <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Vídeos Recentes</h2>
-    <div class="grid md:grid-cols-3 gap-8">
+  <section id="videos-e-destaque" class="py-16 bg-gray-50">
+    <div class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0">
+      <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Vídeos Recentes</h2>
+      <div class="grid md:grid-cols-3 gap-8">
 
-      <!-- CARD 1 -->
-      <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-        <div class="w-full h-48 md:h-56 pointer-events-none">
-          <iframe class="w-full h-full" src="https://www.youtube.com/embed/no6tjPg0PtM" title="Círculos Misteriosos no Universo" frameborder="0" allowfullscreen></iframe>
+        <!-- CARD 1 -->
+        <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
+          <div class="w-full h-48 md:h-56 pointer-events-none">
+            <iframe class="w-full h-full" src="https://www.youtube.com/embed/no6tjPg0PtM" title="Círculos Misteriosos no Universo" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="p-4">
+            <h3 class="text-xl font-semibold text-gray-800 mb-2">CÍRCULOS MISTERIOSOS NO UNIVERSO PODEM SER EXPLOSÕES DE BURACOS NEGROS!</h3>
+            <a href="https://youtu.be/no6tjPg0PtM" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
+              <i class="fab fa-youtube mr-2"></i> Assista no YouTube
+            </a>
+          </div>
         </div>
-        <div class="p-4">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">CÍRCULOS MISTERIOSOS NO UNIVERSO PODEM SER EXPLOSÕES DE BURACOS NEGROS!</h3>
-          <a href="https://youtu.be/no6tjPg0PtM" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
-            <i class="fab fa-youtube mr-2"></i> Assista no YouTube
+
+        <!-- CARD 2 -->
+        <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
+          <div class="w-full h-48 md:h-56 pointer-events-none">
+            <iframe class="w-full h-full" src="https://www.youtube.com/embed/dlGDojJp2uQ" title="Vida em Marte" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="p-4">
+            <h3 class="text-xl font-semibold text-gray-800 mb-2">NASA PODE TER DESTRUÍDO ACIDENTALMENTE O PRIMEIRO SINAL DE VIDA EM MARTE - HÁ 50 ANOS!</h3>
+            <a href="https://youtu.be/dlGDojJp2uQ?si=i8Nekc-kilY4iUka" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
+              <i class="fab fa-youtube mr-2"></i> Assista no YouTube
+            </a>
+          </div>
+        </div>
+
+        <!-- CARD 3 -->
+        <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
+          <div class="w-full h-48 md:h-56 pointer-events-none">
+            <iframe class="w-full h-full" src="https://www.youtube.com/embed/ken15l6Wmsc" title="Partículas como ondas" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="p-4">
+            <h3 class="text-xl font-semibold text-gray-800 mb-2">PARTÍCULAS DO TAMANHO DE VÍRUS SE COMPORTAM COMO ONDAS - PELA PRIMEIRA VEZ!</h3>
+            <a href="https://youtu.be/ken15l6Wmsc?si=vcYhGxfpCnjnx-iO" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
+              <i class="fab fa-youtube mr-2"></i> Assista no YouTube
+            </a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== Vídeos mais vistos do Ciência News ===== -->
+  <section class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0 my-10">
+
+    <div class="text-center mb-8 text-2xl font-semibold text-gray-800">
+      Mais vistos do Ciência News no YouTube
+    </div>
+
+    <div class="grid md:grid-cols-3 sm:grid-cols-1 gap-6">
+
+      <!-- Card Vídeo 1 -->
+      <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col">
+        <div class="w-full aspect-w-16 aspect-h-9 pointer-events-none">
+          <iframe src="https://www.youtube.com/embed/SQ6i4ea5gW4" class="w-full h-full" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="p-4 text-center">
+          <h3 class="text-lg font-semibold mb-2">O QUE ASTRÔNOMOS DESCOBRIRAM NO CÉU EM 2019 — CÍRCULOS MISTERIOSOS</h3>
+          <a href="https://www.youtube.com/watch?v=SQ6i4ea5gW4" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
+            <i class="fab fa-youtube mr-2"></i> Assistir no YouTube
           </a>
         </div>
       </div>
 
-      <!-- CARD 2 -->
-      <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-        <div class="w-full h-48 md:h-56 pointer-events-none">
-          <iframe class="w-full h-full" src="https://www.youtube.com/embed/dlGDojJp2uQ" title="Vida em Marte" frameborder="0" allowfullscreen></iframe>
+      <!-- Card Vídeo 2 -->
+      <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col">
+        <div class="w-full aspect-w-16 aspect-h-9 pointer-events-none">
+          <iframe src="https://www.youtube.com/embed/wVkEAwrEIS0" class="w-full h-full" frameborder="0" allowfullscreen></iframe>
         </div>
-        <div class="p-4">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">NASA PODE TER DESTRUÍDO ACIDENTALMENTE O PRIMEIRO SINAL DE VIDA EM MARTE - HÁ 50 ANOS!</h3>
-          <a href="https://youtu.be/dlGDojJp2uQ?si=i8Nekc-kilY4iUka" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
-            <i class="fab fa-youtube mr-2"></i> Assista no YouTube
+        <div class="p-4 text-center">
+          <h3 class="text-lg font-semibold mb-2">NASA PODE TER DESTRUÍDO ACIDENTALMENTE O PRIMEIRO SINAL DE VIDA EM MARTE — HÁ 50 ANOS</h3>
+          <a href="https://www.youtube.com/watch?v=wVkEAwrEIS0" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
+            <i class="fab fa-youtube mr-2"></i> Assistir no YouTube
           </a>
         </div>
       </div>
 
-      <!-- CARD 3 -->
-      <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-        <div class="w-full h-48 md:h-56 pointer-events-none">
-          <iframe class="w-full h-full" src="https://www.youtube.com/embed/ken15l6Wmsc" title="Partículas como ondas" frameborder="0" allowfullscreen></iframe>
+      <!-- Card Vídeo 3 -->
+      <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col">
+        <div class="w-full aspect-w-16 aspect-h-9 pointer-events-none">
+          <iframe src="https://www.youtube.com/embed/yJkLrHIYKBc" class="w-full h-full" frameborder="0" allowfullscreen></iframe>
         </div>
-        <div class="p-4">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">PARTÍCULAS DO TAMANHO DE VÍRUS SE COMPORTAM COMO ONDAS - PELA PRIMEIRA VEZ!</h3>
-          <a href="https://youtu.be/ken15l6Wmsc?si=vcYhGxfpCnjnx-iO" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
-            <i class="fab fa-youtube mr-2"></i> Assista no YouTube
+        <div class="p-4 text-center">
+          <h3 class="text-lg font-semibold mb-2">PARTÍCULAS DO TAMANHO DE VÍRUS SE COMPORTAM COMO ONDAS — PELA PRIMEIRA VEZ</h3>
+          <a href="https://www.youtube.com/watch?v=yJkLrHIYKBc" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
+            <i class="fab fa-youtube mr-2"></i> Assistir no YouTube
           </a>
         </div>
       </div>
 
     </div>
-  </div>
-</section>
+  </section>
 
+  <!-- ===== FEED PHYS.ORG ===== -->
+  <section class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0 p-4">
+    <h1 class="text-2xl font-bold mb-6 text-center">Artigos Recomendados</h1>
+    <div id="feed" class="grid gap-6 md:grid-cols-3 sm:grid-cols-1"></div>
+  </section>
 
 </main>
 
 
-  <!-- =========================== FOOTER =========================== -->
+  <!-- FOOTER -->
   <footer class="bg-gray-900 text-white py-8">
     <div class="max-w-7xl mx-auto px-4">
       <div class="flex flex-col md:flex-row justify-between items-start md:items-center gap-6 mb-6">
-        <!-- Menu Footer -->
         <nav class="mb-4 md:mb-0" aria-label="Links do rodapé">
           <ul class="flex flex-wrap gap-6">
             <li><a href="https://canalciencianews.github.io/" class="hover:text-orange-400 font-semibold">Início</a></li>
@@ -315,11 +335,9 @@
             <li><a href="#" class="hover:text-orange-400 font-semibold">Contato</a></li>
           </ul>
         </nav>
-        <!-- Contato -->
         <div class="mb-4 md:mb-0">
           <p>Contato: <a href="mailto:canalciencianews@gmail.com" class="hover:text-orange-400">canalciencianews@gmail.com</a></p>
         </div>
-        <!-- Social Icons -->
         <div class="flex gap-4 text-xl">
           <a href="https://www.facebook.com/profile.php?id=100079774894307" class="hover:text-orange-400" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
           <a href="https://www.instagram.com/ciencianews1/" class="hover:text-orange-400" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
@@ -334,19 +352,14 @@
         <div class="bg-blue-800 px-4 py-2 rounded-lg shadow-lg flex items-center space-x-2">
           <span class="text-sm font-semibold">Visualizações:</span>
           <a title="Contador de Visitas do MegaContador" href="https://megacontador.com.br/">
-            <img src="https://megacontador.com.br/img-6nmRDWUNa5Lh3tG6-1.gif" 
-                 alt="Contador de visitas" 
-                 class="h-6 rounded">
+            <img src="https://megacontador.com.br/img-6nmRDWUNa5Lh3tG6-1.gif" alt="Contador de visitas" class="h-6 rounded">
           </a>
         </div>
       </div>
     </div>
   </footer>
-
-  <!-- =========================== SCRIPTS =========================== -->
   <script src="script.js"></script>
   <script>
-    // seta o ano atual no rodapé
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
