--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
           <iframe src="https://www.youtube.com/embed/SQ6i4ea5gW4" class="w-full h-full" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="p-4 text-center">
-          <h3 class="text-lg font-semibold mb-2">O QUE ASTRÔNOMOS DESCOBRIRAM NO CÉU EM 2019 — CÍRCULOS MISTERIOSOS</h3>
+          <h3 class="text-lg font-semibold mb-2">
+ORCA DEVORA TUBARÃO BRANCO: É O PRIMEIRO REGISTRO AÉREO DA CAÇADA!!!</h3>
           <a href="https://www.youtube.com/watch?v=SQ6i4ea5gW4" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
             <i class="fab fa-youtube mr-2"></i> Assistir no YouTube
           </a>
@@ -292,7 +293,7 @@
           <iframe src="https://www.youtube.com/embed/wVkEAwrEIS0" class="w-full h-full" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="p-4 text-center">
-          <h3 class="text-lg font-semibold mb-2">NASA PODE TER DESTRUÍDO ACIDENTALMENTE O PRIMEIRO SINAL DE VIDA EM MARTE — HÁ 50 ANOS</h3>
+          <h3 class="text-lg font-semibold mb-2">O PÁSSARO QUE APRENDEU A IMITAR PERFEITAMENTE O CHORO DE UM BEBÊ HUMANO: OUÇA !!!</h3>
           <a href="https://www.youtube.com/watch?v=wVkEAwrEIS0" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
             <i class="fab fa-youtube mr-2"></i> Assistir no YouTube
           </a>
@@ -305,7 +306,7 @@
           <iframe src="https://www.youtube.com/embed/yJkLrHIYKBc" class="w-full h-full" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="p-4 text-center">
-          <h3 class="text-lg font-semibold mb-2">PARTÍCULAS DO TAMANHO DE VÍRUS SE COMPORTAM COMO ONDAS — PELA PRIMEIRA VEZ</h3>
+          <h3 class="text-lg font-semibold mb-2">INCRÍVEIS "NOVAS" IMAGENS DA CHEGADA DO HOMEM À LUA !!</h3>
           <a href="https://www.youtube.com/watch?v=yJkLrHIYKBc" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition">
             <i class="fab fa-youtube mr-2"></i> Assistir no YouTube
           </a>
