--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         <span class="font-bold text-lg tracking-tight">Ciência News</span>
       </a>
       <nav class="hidden md:flex gap-6" aria-label="Menu principal">
-        <a href="https://canalciencianews.github.io/" class="hover:text-orange-400 transition font-semibold">Início</a>
+        <a href="https://portalciencianews.com.br/" class="hover:text-orange-400 transition font-semibold">Início</a>
+        <a href="https://portalciencianews.com.br/post/arquivos.html" class="block text-white hover:text-orange-400 font-semibold">Arquivos</a>
         <a href="#" class="hover:text-orange-400 transition font-semibold">Contato</a>
       </nav>
       <div class="hidden md:flex gap-4 text-xl items-center">
@@ -88,8 +89,8 @@
       </button>
     </div>
     <nav id="mobileNav" class="md:hidden bg-[#0b2545] px-4 py-2 space-y-2 hidden transition-all duration-300" aria-label="Menu móvel">
-      <a href="https://canalciencianews.github.io/" class="block text-white hover:text-orange-400 font-semibold">Início</a>
-      <a href="#" class="block text-white hover:text-orange-400 font-semibold">Notícias</a>
+      <a href="https://portalciencianews.com.br/" class="block text-white hover:text-orange-400 font-semibold">Início</a>
+      <a href="https://portalciencianews.com.br/post/arquivos.html" class="block text-white hover:text-orange-400 font-semibold">Arquivos</a>
       <a href="#" class="block text-white hover:text-orange-400 font-semibold">Contato</a>
       <div class="flex gap-4 text-xl pt-2">
         <a href="https://www.facebook.com/profile.php?id=100079774894307" class="hover:text-orange-400" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
@@ -326,7 +327,7 @@ ORCA DEVORA TUBARÃO BRANCO: É O PRIMEIRO REGISTRO AÉREO DA CAÇADA!!!</h3>
         <nav class="mb-4 md:mb-0" aria-label="Links do rodapé">
           <ul class="flex flex-wrap gap-6">
             <li><a href="https://canalciencianews.github.io/" class="hover:text-orange-400 font-semibold">Início</a></li>
-            <li><a href="#" class="hover:text-orange-400 font-semibold">Notícias</a></li>
+            <li><a href="https://portalciencianews.com.br/post/arquivos.html" class="hover:text-orange-400 font-semibold">Arquivos</a></li> 
             <li><a href="#" class="hover:text-orange-400 font-semibold">Contato</a></li>
           </ul>
         </nav>
