--- a/index.html
+++ b/index.html
@@ -319,45 +319,47 @@ ORCA DEVORA TUBARÃO BRANCO: É O PRIMEIRO REGISTRO AÉREO DA CAÇADA!!!</h3>
 
     <!-- AREA DE FORMULARIO DE CONTATOS -->
     <!-- ======================= -->
+<!-- ======================= -->
 <!-- Section Formulário Contato -->
 <!-- ======================= -->
-<section id="contato" class="max-w-[90rem] mx-auto px-6 py-12">
-  <h2 class="text-2xl font-bold mb-6">Entre em Contato</h2>
-  
-  <form id="contactForm" class="space-y-4">
-    <div>
-      <label for="nome" class="block font-medium">Nome</label>
-      <input type="text" id="nome" required class="w-full border rounded p-2">
-    </div>
+<section id="contato" class="py-12 bg-gray-100">
+  <div class="max-w-[1000px] mx-auto bg-white p-8 rounded-lg shadow-md">
+    <h2 class="text-2xl font-bold mb-6 text-center">Entre em Contato</h2>
 
-    <div>
-      <label for="email" class="block font-medium">Email</label>
-      <input type="email" id="email" required class="w-full border rounded p-2">
-    </div>
+    <form id="contactForm" class="space-y-4">
+      <div>
+        <label for="nome" class="block font-medium mb-1">Nome</label>
+        <input type="text" id="nome" required class="w-full border rounded p-2">
+      </div>
 
-    <div>
-      <label for="assunto" class="block font-medium">Assunto</label>
-      <input type="text" id="assunto" required class="w-full border rounded p-2">
-    </div>
+      <div>
+        <label for="email" class="block font-medium mb-1">Email</label>
+        <input type="email" id="email" required class="w-full border rounded p-2">
+      </div>
 
-    <div>
-      <label for="mensagem" class="block font-medium">Mensagem</label>
-      <textarea id="mensagem" required class="w-full border rounded p-2"></textarea>
-    </div>
+      <div>
+        <label for="assunto" class="block font-medium mb-1">Assunto</label>
+        <input type="text" id="assunto" required class="w-full border rounded p-2">
+      </div>
 
-    <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">
-      Enviar
-    </button>
-  </form>
+      <div>
+        <label for="mensagem" class="block font-medium mb-1">Mensagem</label>
+        <textarea id="mensagem" required class="w-full border rounded p-2"></textarea>
+      </div>
 
-  <p id="status" class="mt-4 text-sm"></p>
+      <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded w-full">
+        Enviar
+      </button>
+    </form>
+
+    <p id="status" class="mt-4 text-sm text-center"></p>
+  </div>
 
   <!-- Script Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
     import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
-    // Configuração do seu Firebase (direto do console)
     const firebaseConfig = {
       apiKey: "AIzaSyCXvccq220EDORjeLig90Iwna27HrRMJS8",
       authDomain: "formulario-de-contato-6c213.firebaseapp.com",
@@ -368,15 +370,12 @@ ORCA DEVORA TUBARÃO BRANCO: É O PRIMEIRO REGISTRO AÉREO DA CAÇADA!!!</h3>
       measurementId: "G-24DRC401DW"
     };
 
-    // Inicializa Firebase e Firestore
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    // Referência ao formulário
     const form = document.getElementById('contactForm');
     const status = document.getElementById('status');
 
-    // Evento de envio
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
 
@@ -386,7 +385,6 @@ ORCA DEVORA TUBARÃO BRANCO: É O PRIMEIRO REGISTRO AÉREO DA CAÇADA!!!</h3>
       const mensagem = document.getElementById('mensagem').value;
 
       try {
-        // Alinha com suas regras do Firestore:
         await addDoc(collection(db, "contact_submissions"), {
           name: nome,
           email: email,
@@ -408,6 +406,7 @@ ORCA DEVORA TUBARÃO BRANCO: É O PRIMEIRO REGISTRO AÉREO DA CAÇADA!!!</h3>
     });
   </script>
 </section>
+
 
 
 </main>
